--- a/Home.html
+++ b/Home.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VIBLOGUE</title>
     <link rel="stylesheet" href="Home.css" >
+   
 </head>
 <body>
     <nav>
         <ul class="navbar">
             <li class="logo"><h2>Viblogue</h2></li>
-            <li class="navName">Home</li>
-            <li class="navName">Blogs</li>
-            <li class="navName">Create</li>
-            <li class="navName">About</li>
-            <li class="navName">Contact us</li>
+           <li ><a href="Home.html" class="navName">Home</a></li>
+            <li ><a href="Reader.html" class="navName">Blogs</a></li>
+            <li ><a href="Editor.html" class="navName">Create</a></li>
+            <li ><a href="About.html" class="navName">About</a></li>
+           
         </ul>
     </nav>
     <div class="container1">
