--- a/Editor.html
+++ b/Editor.html
@@ -10,11 +10,10 @@
     <nav>
         <ul class="navbar"> <!--Navigtion bar for navigating to other pages-->
             <li class="logo"><h2>Viblogue</h2></li>
-            <li class="navName">Home</li>
-            <li class="navName">Blogs</li>
-            <li class="navName">Create</li>
-            <li class="navName">About</li>
-            <li class="navName">Contact us</li>
+            <li class="navName" ><a href="Home.html" class="navName">Home</a></li>
+            <li class="navName"><a href="Reader.html" class="navName">Blogs</a></li>
+            <li class="navName"><a href="Editor.html" class="navName">Create</a></li>
+            <li class="navName"><a href="About.html" class="navName">About</a></li>
         </ul>
     </nav>
     <form action="Reader.html">
