Update and rename Home.html to index.html
Renamed the file name
Added redirection when the buttons are clicked

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <h2 class="h2c1">Your daily dose of good vibes and inspiring stories!</h2>
         <p class="pc1">Welcome to Viblogue! Your go-to space for stories, ideas, and experiences that spread good vibes and positive energy.</p>
        
-        <button class="bc1">Create Blog!</button>
-        <button class="bc1">Read Blogs!</button>
+        <button class="bc1"><a style="color: rgb(0, 0, 0);" href="Editor.html">Create</a></button>
+        <button class="bc1"><a  style="color: rgb(0, 0, 0);"href="Reader.html">Read</a></button>
     </div>
     <div class="container2">
     <h1 class="h1c2">About Viblogue</h1>
