--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <ul class="navbar">
             <li class="logo"><h2>Viblogue</h2></li>
-           <li ><a href="Home.html" class="navName">Home</a></li>
+           <li ><a href="index.html" class="navName">Home</a></li>
             <li ><a href="Reader.html" class="navName">Blogs</a></li>
             <li ><a href="Editor.html" class="navName">Create</a></li>
             <li ><a href="About.html" class="navName">About</a></li>
