--- a/Editor.html
+++ b/Editor.html
@@ -6,20 +6,24 @@
     <title>Create Post</title>
     <link rel="stylesheet" href="Editor.css">
 </head>
+
 <body>
     <nav>
         <ul class="navbar"> <!--Navigtion bar for navigating to other pages-->
             <li class="logo"><h2>Viblogue</h2></li>
-            <li class="navName" ><a href="Home.html" class="navName">Home</a></li>
+            <li class="navName" ><a href="index.html" class="navName">Home</a></li>
             <li class="navName"><a href="Reader.html" class="navName">Blogs</a></li>
             <li class="navName"><a href="Editor.html" class="navName">Create</a></li>
             <li class="navName"><a href="About.html" class="navName">About</a></li>
         </ul>
     </nav>
     <form action="Reader.html">
-    <div class="banner">    <!--Imange to be appeared on the top-->
+    <div class="banner">    <!--Image to be appeared on the top-->
+      <img src="Banner.jpeg" alt="Banner image" width="100%" height="100%">
+       <!--
         <input type="file" accept="image/*" id="banner-upload" hidden>
         <label for="banner-upload" class="banner-upload-btn">Upload Banner</label>
+        --> 
     </div>
     <div class="blog">  <!--User input for the blog-->
         <textarea type="text" class="title" placeholder="Blog Heading" id="blog-head"></textarea>
@@ -32,6 +36,7 @@
         <label for="image-upload" class="btn"  >Upload Image</label>
     </div>
 </form>
+
 <footer class="footer">
     <p> Team Name : Synergy squad </p>
     <p> Team Members : Nethra.S, Priyadharshini.J, Pavithra.M</p>
@@ -40,3 +45,4 @@
 <script src="Editor.js"></script>
 </body>
 </html>
+  
