--- a/Reader.html
+++ b/Reader.html
@@ -19,7 +19,7 @@
     </nav>
 <div id="WorkArea">
     <div class="banner">    <!--Image to be appeared on the top-->
-        <img id="banner"  alt="Banner image">
+       <img src="Banner.jpeg" alt="Banner image" width="100%" height="100%">
     </div>
     <div class="blog">  <!--User input for the blog-->
         <h1 id="head"></h1>
